# Homework-3

./: .gitignore  CMakeLists.txt  README.md
exercises/ex1_serializacion/: CMakeLists.txt  main.cpp
exercises/ex1_serializacion/include/ex1/: IMediciones.hpp  MedicionBase.hpp  Posicion.hpp  Presion.hpp  SaveFlightData.hpp
exercises/ex1_serializacion/src/: MedicionBase.cpp  Posicion.cpp  Presion.cpp  SaveFlightData.cpp
exercises/ex1_serializacion/tests/: CMakeLists.txt  test_serializacion.cpp
exercises/ex2_templates/: CMakeLists.txt  main.cpp
exercises/ex2_templates/include/ex2/: Circulo.hpp  Elipse.hpp  ProcesadorFigura.hpp  Punto.hpp  Rectangulo.hpp
exercises/ex2_templates/src/: Circulo.cpp  Elipse.cpp  Punto.cpp  Rectangulo.cpp
exercises/ex2_templates/tests/: CMakeLists.txt  test_template_specialization.cpp
exercises/ex3_json_builder/: CMakeLists.txt  main  main.cpp  output.json
exercises/ex3_json_builder/include/ex3/: ConceptosDatos.hpp  ConstructorDeJSON.hpp  ProcesadorDeDatos.hpp
exercises/ex3_json_builder/src/: ConstructorDeJSON.cpp  PrecesadorDeDatos.cpp
